# MarketLens

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dashboard/: app.py
dashboard/components/: charts.py  data_access.py
dashboard/pages/: 01_price_explorer.py  02_volatility.py  03_correlations.py  04_technicals.py
dbt/: .user.yml  dbt_project.yml  package-lock.yml  profiles.yml
dbt/models/: sources.yml
dbt/models/gold/: mart_correlations.sql  mart_daily_returns.sql  mart_technical_indicators.sql  mart_volatility.sql  schema.yml
dbt/models/silver/: schema.yml  stg_crypto.sql  stg_equities.sql  stg_macro.sql
dbt/tests/: assert_correlation_bounds.sql  assert_no_future_dates.sql  assert_price_positive.sql  assert_rsi_bounds.sql
docs/: architecture.md  data-dictionary.md
marketlens/: config.py  db.py
marketlens/flows/: pipeline_flow.py
marketlens/ingestion/: base.py  crypto.py  equities.py  macro.py
marketlens/transforms/: clean.py  enrich.py  normalize.py
scripts/: bootstrap_db.py  run_ingest.py  run_transforms.py  seed_sample_data.py
tests/: conftest.py  test_db.py
tests/test_ingestion/: test_base.py  test_crypto.py  test_equities.py
tests/test_transforms/: test_clean.py  test_enrich.py  test_normalize.py
